# fsspec-db

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  LICENSE  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/fsspec_db/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/src/: adapter-backends.doctree  api.doctree  concepts.doctree  paths.doctree  python-backends.doctree  sql-backends.doctree  sqlite.doctree  tutorial.doctree
.doctrees/pyarrow/tests/data/orc/: README.doctree
.github/workflows/: build.yaml  integration.yaml
_modules/: index.html
_modules/fsspec_db/: duckdb.html  mysql.html  odbc.html  postgres.html  python.html  spec.html  sqlalchemy.html  sqlite.html
_sources/: README.md.txt  index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/fsspec_db/: index.rst.txt
_sources/docs/src/: adapter-backends.md.txt  concepts.md.txt  paths.md.txt  python-backends.md.txt
autoapi/: index.html
autoapi/fsspec_db/: index.html
autoapi/test_all/: index.html
ci/: docker-compose.yml
docs/src/: adapter-backends.html  api.html  api.md  concepts.html  concepts.md  paths.html  paths.md  python-backends.html  python-backends.md  sql-backends.html  sql-backends.md  sqlite.html  sqlite.md  tutorial.html  tutorial.md
fsspec_db/: __init__.py  _information_schema.py  duckdb.py  mysql.py  odbc.py  postgres.py  python.py  spec.py  sqlalchemy.py  sqlite.py
fsspec_db/examples/: create_superstore_sqlite.py
fsspec_db/tests/: test_all.py  test_integration.py
pyarrow/tests/data/orc/: README.html
rust/: Cargo.toml
rust/python/: database.rs  lib.rs  types.rs
rust/python/example/: mod.rs
rust/src/: codec.rs  database.rs  error.rs  file.rs  fs.rs  lib.rs  mysql.rs  path.rs  postgres.rs  sql.rs  sqlite.rs  stream.rs  types.rs
