[package]
name = "fsspec_db_py"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "fsspec_db"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
fsspec_db = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
