[build-system]
requires = [
    "hatchling",
    "hatch-rs>=0.2.1",
]
build-backend = "hatchling.build"

[project]
name = "fsspec-db"
authors = [
    {name = "the fsspec-db authors", email = "dev@1kbgz.com"},
]
description = "Database handling for fsspec filesystems"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.2.0"
requires-python = ">=3.10"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fsspec",
    "fsspec-rs>=0.1.2",
    "pyarrow",
]

[project.optional-dependencies]
docs = [
    "yardang",
]
integration = [
    "psycopg[binary]",
    "pymysql",
    "sqlalchemy>=2",
]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "cibuildwheel",
    "codespell",
    "hatch-rs",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
    "yardang",
]

[project.scripts]

[project.entry-points."fsspec.specs"]
"db+mysql" = "fsspec_db.mysql.MySQLDatabaseFileSystem"
"db+postgres" = "fsspec_db.postgres.PostgresDatabaseFileSystem"
"db+postgresql" = "fsspec_db.postgres.PostgresDatabaseFileSystem"
"db+sqlite" = "fsspec_db.sqlite.SQLiteDatabaseFileSystem"
"db+sqlalchemy" = "fsspec_db.sqlalchemy.SQLAlchemyDatabaseFileSystem"

[project.urls]
Repository = "https://github.com/1kbgz/fsspec-db"
Homepage = "https://github.com/1kbgz/fsspec-db"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = false 
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "fsspec_db/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rust/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.cibuildwheel]
build = "cp310-*"
test-command = "pytest -vvv {project}/fsspec_db/tests"
test-extras = "develop"

[tool.cibuildwheel.linux]
before-all = """
curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y
rustup target add aarch64-unknown-linux-gnu
rustup target add x86_64-unknown-linux-gnu
rustup show
"""
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always"}
skip = "*i686* *musllinux*"

[tool.cibuildwheel.macos]
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always", MACOS_DEPLOYMENT_TARGET=11.0}
archs = "arm64"

[tool.cibuildwheel.windows]
environment = {PATH="$UserProfile\\.cargo\bin;$PATH", CARGO_TERM_COLOR="always"}
skip = "*win32 *arm_64"

[tool.coverage.run]
branch = true
omit = [
    "fsspec_db/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "fsspec_db/*.dll",
    "fsspec_db/*.dylib",
    "fsspec_db/*.so",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.hooks.hatch-rs]
verbose = true
abi3 = true
module = "fsspec_db"
path = "."

[tool.hatch.build.targets.sdist]
packages = [
    "fsspec_db",
    "rust",
    "Cargo.toml",
    "Cargo.lock",
]
exclude = [
    "rust/Makefile",
    "target",
]

[tool.hatch.build.targets.wheel]
packages = [
    "fsspec_db",
]
exclude = [
    "rust",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "fsspec_db/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "fsspec_db",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
title = "fsspec-db"
root = "README.md"
pages = [
    "docs/src/concepts.md",
    "docs/src/paths.md",
    "docs/src/sqlite.md",
    "docs/src/sql-backends.md",
    "docs/src/python-backends.md",
    "docs/src/api.md",
]
use-autoapi = false
exclude_patterns = [
    "REVIEW.md",
]
