[package]
name = "fsspec_db"
version = "0.2.0"
authors = ["the fsspec-db authors <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/fsspec-db"
description = "Database handling for fsspec filesystems"

[lib]
name = "fsspec_db"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
arrow = "54.3.1"
bytes = "1"
csv-core = "0.1"
fsspec_rs = "0.1.2"
parquet = "54.3.1"
sqlparser = { version = "0.62.0", features = ["visitor"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "bigdecimal", "uuid", "json"] }
tokio = { version = "1", features = ["rt"] }
